# wgpu-poc

./: Cargo.toml  justfile  post_process_shader.wgsl  shader.wgsl
src/: lib.rs  main.rs
