[package]
name = "wgpu-poc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
wgpu = { version = "26.0" }
pollster = { version = "0.4.0" }
image = { version = "0.25.6" }
bincode = { version = "2.0.1" }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.12", features = [ "wayland" ] }
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.12", features = [ "android-native-activity" ] }

[package.metadata.android]
package = "com.github.sebgrz"
build_targets = [ "aarch64-linux-android" ]
large_heap = true

[package.metadata.android.sdk]
min_sdk_version = 20
target_sdk_version = 29

[package.metadata.android.application]
extract_native_libs = true
